@@ -1,34 +1,28 @@
 package com.cognifide.gradle.aem.launcher
 
-import java.util.*
+import java.io.File
+import java.util.Properties
 
 class BuildScaffolder(private val launcher: Launcher) {
 
     fun scaffold() {
-        saveBuildSrc()
         saveProperties()
         saveSettings()
         saveRootBuildScript()
-        saveEnvBuildScript()
-        saveEnvSrcFiles()
+        when (aemVersion) {
+            "cloud" -> EnvCloudScaffolder(launcher).scaffold()
+            null -> EnvScaffolder(launcher).scaffold()
+            else -> EnvOnPremScaffolder(launcher).scaffold()
+        }
     }
 
-    private fun saveBuildSrc() = launcher.workFileOnce("buildSrc/build.gradle.kts") {
-        println("Saving Gradle build source script file '$this'")
-        writeText("""
-            repositories {
-                mavenLocal()
-                mavenCentral()
-                gradlePluginPortal()
-            }
-            
-            dependencies {
-                implementation("com.cognifide.gradle:aem-plugin:${launcher.pluginVersion}")
-                implementation("com.cognifide.gradle:environment-plugin:2.0.3")
-                implementation("com.neva.gradle:fork-plugin:7.0.0")
-            }
-        """.trimIndent())
-    }
+    private val aemVersion get() = archetypeProperties?.getProperty("aemVersion")
+
+    private val archetypeProperties get() = if (archetypePropertiesFile.exists()) Properties().apply {
+        archetypePropertiesFile.inputStream().buffered().use { load(it) }
+    } else null
+
+    private val archetypePropertiesFile get() = File("archetype.properties")
 
     private fun saveProperties() = launcher.workFileOnce("gradle.properties") {
         println("Saving Gradle properties file '$this'")
@@ -38,6 +32,7 @@ class BuildScaffolder(private val launcher: Launcher) {
                 if (savePropsFlag) {
                     putAll(saveProps)
                 }
+                putAll(projectProps)
                 store(output, null)
             }
         }
@@ -47,20 +42,22 @@ class BuildScaffolder(private val launcher: Launcher) {
 
     private val saveProps get() = launcher.args.filter { it.startsWith(Launcher.ARG_SAVE_PREFIX) }
         .map { it.removePrefix(Launcher.ARG_SAVE_PREFIX) }
-        .map { it.substringBefore("=") to it.substringAfter("=") }
-        .toMap()
+        .associate { it.substringBefore("=") to it.substringAfter("=") }
 
     private val defaultProps get() = mapOf(
         "org.gradle.logging.level" to "info",
         "org.gradle.daemon" to "true",
         "org.gradle.parallel" to "true",
         "org.gradle.caching" to "true",
-        "org.gradle.jvmargs" to "-Xmx2048m -XX:MaxPermSize=512m -Dfile.encoding=UTF-8"
+        "org.gradle.jvmargs" to "-Xmx2048m -Dfile.encoding=UTF-8"
     )
+
+    private val projectProps get() = mapOf("javaSupport.version" to "11")
 
     private fun saveRootBuildScript() = launcher.workFileOnce("build.gradle.kts") {
         println("Saving root Gradle build script file '$this'")
-        writeText("""
+        writeText(
+            """
             plugins {
                 id("com.cognifide.aem.common")
                 id("com.neva.fork")
@@ -86,171 +83,16 @@ class BuildScaffolder(private val launcher: Launcher) {
                     discover()
                 }
             }
-        """.trimIndent())
-    }
-
-    private fun saveEnvBuildScript() = launcher.workFileOnce("env/build.gradle.kts") {
-        println("Saving environment Gradle build script file '$this'")
-        writeText("""
-            plugins {
-                id("com.cognifide.aem.instance.local")
-                id("com.cognifide.environment")
-            }
-            
-            val instancePassword = common.prop.string("instance.default.password")
-            val publishHttpUrl = common.prop.string("publish.httpUrl") ?: aem.findInstance("local-publish")?.httpUrl ?: "http://127.0.0.1:4503"
-            val dispatcherHttpUrl = common.prop.string("dispatcher.httpUrl") ?: "http://127.0.0.1:80"
-            val dispatcherTarUrl = common.prop.string("dispatcher.tarUrl") ?: "http://download.macromedia.com/dispatcher/download/dispatcher-apache2.4-linux-x86_64-4.3.3.tar.gz"
-
-            aem {
-                instance { // https://github.com/Cognifide/gradle-aem-plugin/blob/master/docs/instance-plugin.md
-                    provisioner {
-                        enableCrxDe()
-                        configureReplicationAgentAuthor("publish") {
-                            agent { configure(transportUri = "${'$'}publishHttpUrl/bin/receive?sling:authRequestLogin=1", transportUser = "admin", transportPassword = instancePassword, userId = "admin") }
-                            version.set(publishHttpUrl)
-                        }
-                        configureReplicationAgentPublish("flush") {
-                            agent { configure(transportUri = "${'$'}dispatcherHttpUrl/dispatcher/invalidate.cache") }
-                            version.set(dispatcherHttpUrl)
-                        }
-                    }
-                }
-            }
-            
-            environment { // https://github.com/Cognifide/gradle-environment-plugin
-                docker {
-                    containers {
-                        "httpd" {
-                            resolve {
-                                resolveFiles {
-                                    download(dispatcherTarUrl).use {
-                                        copyArchiveFile(it, "**/dispatcher-apache*.so", file("modules/mod_dispatcher.so"))
-                                    }
-                                }
-                                ensureDir("htdocs", "cache", "logs")
-                            }
-                            up {
-                                symlink(
-                                    "/etc/httpd.extra/conf.modules.d/02-dispatcher.conf" to "/etc/httpd/conf.modules.d/02-dispatcher.conf",
-                                    "/etc/httpd.extra/conf.d/variables/default.vars" to "/etc/httpd/conf.d/variables/default.vars"
-                                )
-                                ensureDir("/usr/local/apache2/logs", "/var/www/localhost/htdocs", "/var/www/localhost/cache")
-                                execShell("Starting HTTPD server", "/usr/sbin/httpd -k start")
-                            }
-                            reload {
-                                cleanDir("/var/www/localhost/cache")
-                                execShell("Restarting HTTPD server", "/usr/sbin/httpd -k restart")
-                            }
-                            dev {
-                                watchRootDir(
-                                    "dispatcher/src/conf.d",
-                                    "dispatcher/src/conf.dispatcher.d",
-                                    "env/src/environment/httpd")
-                            }
-                        }
-                    }
-                }
-                hosts {
-                    "http://publish" { tag("publish") }
-                    "http://dispatcher" { tag("dispatcher") }
-                }
-                healthChecks {
-                    aem.findInstance("local-author")?.let { instance ->
-                        http("Author Sites Editor", "${'$'}{instance.httpUrl}/sites.html") {
-                            containsText("Sites")
-                            options { basicCredentials = instance.credentials }
-                        }
-                        http("Author Replication Agent - Publish", "${'$'}{instance.httpUrl}/etc/replication/agents.author/publish.test.html") {
-                            containsText("succeeded")
-                            options { basicCredentials = instance.credentials }
-                        }
-                    }
-                    aem.findInstance("local-publish")?.let { instance ->
-                        http("Publish Replication Agent - Flush", "${'$'}{instance.httpUrl}/etc/replication/agents.publish/flush.test.html") {
-                            containsText("succeeded")
-                            options { basicCredentials = instance.credentials }
-                        }
-                        /*
-                        http("Site Home", "http://publish/us/en.html") {
-                            containsText("My Site")
-                        }
-                        */
-                    }
-                }
-            }
-
-            tasks {
-                instanceSetup { if (rootProject.aem.mvnBuild.available) dependsOn(":all:deploy") }
-                instanceResolve { dependsOn(":requireProps") }
-                instanceCreate { dependsOn(":requireProps") }
-                environmentUp { mustRunAfter(instanceAwait, instanceUp, instanceProvision, instanceSetup) }
-                environmentAwait { mustRunAfter(instanceAwait, instanceUp, instanceProvision, instanceSetup) }
-            }
-        """.trimIndent())
-    }
-
-    private fun saveEnvSrcFiles() {
-        launcher.workFileOnce("env/src/environment/docker-compose.yml.peb") {
-            println("Saving environment Docker compose file '$this'")
-            writeText("""
-                version: "3"
-                services:
-                  httpd:
-                    image: centos/httpd:latest
-                    command: ["tail", "-f", "--retry", "/usr/local/apache2/logs/error.log"]
-                    deploy:
-                      replicas: 1
-                    ports:
-                      - "80:80"
-                    networks:
-                      - docker-net
-                    volumes:
-                      - "{{ rootPath }}/dispatcher/src/conf.d:/etc/httpd/conf.d"
-                      - "{{ rootPath }}/dispatcher/src/conf.dispatcher.d:/etc/httpd/conf.dispatcher.d"
-                      - "{{ sourcePath }}/httpd:/etc/httpd.extra"
-                      - "{{ workPath }}/httpd/modules/mod_dispatcher.so:/etc/httpd/modules/mod_dispatcher.so"
-                      - "{{ workPath }}/httpd/logs:/etc/httpd/logs"
-                      {% if docker.runtime.safeVolumes %}
-                      - "{{ workPath }}/httpd/cache:/var/www/localhost/cache"
-                      - "{{ workPath }}/httpd/htdocs:/var/www/localhost/htdocs"
-                      {% endif %}
-                    {% if docker.runtime.hostInternalIpMissing %}
-                    extra_hosts:
-                      - "host.docker.internal:{{ docker.runtime.hostInternalIp }}"
-                    {% endif %}
-                networks:
-                  docker-net:
-            """.trimIndent())
-        }
-
-        launcher.workFileOnce("env/src/environment/httpd/conf.d/variables/default.vars") {
-            println("Saving environment variables file '$this'")
-            writeText("""
-                Define DOCROOT /var/www/localhost/cache
-                Define AEM_HOST host.docker.internal
-                Define AEM_IP 10.0.*.*
-                Define AEM_PORT 4503
-
-                Define DISP_LOG_LEVEL Warn
-                Define REWRITE_LOG_LEVEL Warn
-                Define EXPIRATION_TIME A2592000
-            """.trimIndent())
-        }
-
-        launcher.workFileOnce("env/src/environment/httpd/conf.modules.d/02-dispatcher.conf") {
-            println("Saving environment HTTPD dispatcher config file '$this'")
-            writeText("""
-                LoadModule dispatcher_module modules/mod_dispatcher.so
-            """.trimIndent())
-        }
+            """.trimIndent()
+        )
     }
 
     private fun saveSettings() = launcher.workFileOnce("settings.gradle.kts") {
         println("Saving Gradle settings file '$this'")
-        writeText("""
+        writeText(
+            """
             include(":env")
-            
-        """.trimIndent())
+            """.trimIndent()
+        )
     }
 }
